add burger menu and router config (not working)

--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^7.2.1",
     "i18next": "^19.3.2",
     "react": "^16.13.0",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.0",
     "react-i18next": "^11.3.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "source-map-explorer": "^2.3.1"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
